# timeclock-el-punch-clock

./: .taplo.toml  justfile  lefthook.yml  mise.toml  pyproject.toml
justfiles/: check.just  fix.just  lint.just
justfiles/check/: justfile.just  python-buildtool.just  python.just  toml.just  yaml.just
justfiles/fix/: justfile.just  python-buildtool.just  python.just  toml.just  yaml.just
justfiles/lint/: python.just
src/punch_clock/: __init__.py
src/timeclock_el_punch_clock/: __main__.py  accounts.py  arguments.py  cli.py
src/timeclock_el_punch_clock/commands/: clock_in.py
src/timeclock_el_punch_clock/paths/: errors.py  writeable_file_paths.py
tests/: conftest.py
tests/timeclock_el_punch_clock/: test_arguments.py  test_common.py  test_contract.py
tests/timeclock_el_punch_clock/commands/: test_clock_in.py
