[project]
name = "punch-clock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lukas Grassauer", email = "lukas@grassauer.eu" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
punch-clock = "punch_clock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.11.4,<=0.11.4"]
