[project]
name = "timeclock-el-punch-clock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lukas Grassauer", email = "lukas@grassauer.eu" }]
requires-python = ">=3.12"
dependencies = ["deal>=4.24.5,<=4.24.5"]

[project.scripts]
ttlpc = "timeclock_el_punch_clock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "hypothesis>=6.131.0,<=6.131.0",
  "pytest>=8.3.5,<=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.4,<=0.11.4",
]
typecheck = ["mypy>=1.15.0,<=1.15.0", "pyright>=1.1.398,<=1.3.398"]
